# convolutions

./: conv.py  graph.dot  graph.jinja2  make_graph.py  make_path_graph.py  path_graph.jinja2  pyproject.toml
